styles/components.css
.btn {
    display: inline-block;
    padding: 10px 20px;
    background-color: #00796b;
    color: white;
    text-decoration: none;
    border-radius: 5px;
    font-size: 1.1em;
    transition: background-color 0.3s;
}

.btn:hover {
    background-color: #004d40;
}


.homepage {
    position: absolute;
    top: 20px; /* Adjust the distance from the top */
    right: 20px; /* Aligns the button to the right within the container */
    font-size: 1em; /* Adjust font size as needed */
}


/* social icons  */

.contact-icons {
    display: flex;
    justify-content: center;
    gap: 15px;
    margin-top: 20px;
}


.contact-icon {
    width: 40px;
    height: 40px;
    transition: transform 0.3s ease;
}

.contact-icon:hover {
    transform: scale(1.2);
}



.icon-button {
    background: none;
    border: none;
    cursor: pointer;
    padding: 0;
    outline: none;
    display: inline-flex; /* Centers the icon within the button */
}

.icon {
    width: 80px; /* Default icon size */
    height: 80px; /* Keep height the same as width for square aspect ratio */
    border-radius: 50%; /* Circular icon button */
    transition: transform 0.3s, background-color 0.3s;
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    object-fit: cover; /* Ensures the image fits within the circle without distortion */
}

.icon:hover {
    transform: scale(1.1); /* Hover effect */
    background-color: #128C7E; /* Darker on hover */
}





.follow-icon-button {
    position: fixed; /* Fixed positioning to stay in the same place relative to the viewport */
    bottom: 20px; /* Distance from the bottom of the viewport */
    right: 20px; /* Distance from the right of the viewport */
    z-index: 1000; /* Ensure it appears above other elements */
    transition: transform 0.3s; /* Smooth transition for hover effect */
}

.follow-icon-button:hover {
    transform: scale(1.1); /* Slightly enlarge the icon on hover */
}



/* courses and toggle */


.course-topics {
    margin: 20px 0;
}

.topics-list {
    /* display: none; /* Initially hide the list */
    padding: 0;
    margin: 0;
    list-style-type: none; /* Removes bullet points */
}

.topics-list.active {
    display: block; /* Show the list when active */
}


.toggle-button {
    cursor: pointer; /* Change cursor to pointer */
    background-color: #00796b; /* Button background color */
    color: white; /* Button text color */
    border: none; /* Remove default border */
    padding: 10px; /* Button padding */
    border-radius: 5px; /* Rounded corners */
    font-size: 1em; /* Font size */
    margin-bottom: 10px; /* Space below button */
}

.toggle-button:hover {
    background-color: #005f4b; /* Darker shade on hover */
}

